--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Kiểm tra Camera & Micro</title>
+<title>Kiểm tra Camera & Micro - Test trực tiếp trên Web</title>
 <style>
   body{
     font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;
-    line-height:1.5;
+    line-height:1.4;
     padding:18px;
-    background:#f8f9fb;
+    background:#f7f7f9;
     color:#111;
   }
   h1{font-size:1.2rem;margin:0 0 10px}
@@ -17,21 +17,19 @@
   select,button{
     padding:8px;border-radius:6px;border:1px solid #cfcfcf;background:white
   }
-  button{cursor:pointer;transition:opacity .2s}
-  button:disabled{
-    opacity:0.5;
-    cursor:not-allowed;
-  }
+  button{cursor:pointer}
+  button:disabled{opacity:0.5;cursor:not-allowed}
   video{width:100%;max-width:560px;border-radius:8px;background:#000}
   .controls{display:flex;gap:8px;flex-wrap:wrap}
-  .meter{width:220px;height:22px;border-radius:6px;background:#eee;overflow:hidden;position:relative}
+  .meter{width:200px;height:24px;border-radius:6px;background:#eee;overflow:hidden;position:relative}
   .meter>.level{position:absolute;left:0;top:0;height:100%;width:0%;background:linear-gradient(90deg,#4caf50,#ffeb3b)}
   .panel{margin-top:12px;max-width:760px}
   .small{font-size:0.9rem;color:#444}
   .note{font-size:0.85rem;color:#444;margin-top:8px}
   audio{display:block;margin-top:8px}
   .timer{padding:6px 8px;border-radius:6px;background:#fff;border:1px solid #ddd}
-  hr{margin:14px 0}
+  .note b{color:#000}
+  hr{margin:14px 0;border:0;border-top:1px solid #ddd}
 </style>
 </head>
 <body>
@@ -57,38 +55,36 @@
 
     <video id="videoPreview" playsinline autoplay muted></video>
 
-    <div class="row" style="align-items:center;margin-top:10px">
-      <div class="small">Mức âm thanh (camera/micro):</div>
-      <div class="meter"><div class="level" id="meterLevelCam"></div></div>
-      <div class="timer" id="levelDbCam">— dB</div>
-    </div>
-
     <div class="note">
       ⚠️ <b>Lưu ý:</b> Trình duyệt có thể yêu cầu quyền truy cập <b>camera</b> và <b>micro</b>. 
-      Hãy chọn “Cho phép” để hoạt động bình thường.
+      Tính năng này chỉ hoạt động khi bạn <b>chọn Cho phép</b>.
+    </div>
+
+    <div class="row" style="align-items:center;margin-top:12px">
+      <div class="small">Mức âm thanh (camera/micro):</div>
+      <div class="meter" title="Audio level (camera)"><div class="level" id="meterLevel"></div></div>
+      <div class="timer" id="levelDb">— dB</div>
     </div>
 
     <hr />
 
     <div class="row" style="align-items:center">
-      <div class="small">Ghi âm kiểm tra micro:</div>
+      <div class="small">Mức âm thanh khi ghi âm:</div>
+      <div class="meter" title="Audio level (record)"><div class="level" id="recMeterLevel"></div></div>
+      <div class="timer" id="recLevelDb">— dB</div>
     </div>
 
-    <div class="controls">
+    <div style="margin-top:12px" class="controls">
       <button id="startRecBtn">Bắt đầu Ghi âm</button>
       <button id="stopRecBtn" disabled>Ngưng Ghi</button>
       <button id="playRecBtn" disabled>Phát Lại</button>
-      <a id="downloadLink" style="padding:8px;border-radius:6px;text-decoration:none;border:1px solid #cfcfcf;background:#fff;color:#111" download="recording.webm">Tải về</a>
+      <a id="downloadLink" style="display:inline-block;padding:8px;border-radius:6px;text-decoration:none;border:1px solid #cfcfcf;background:#fff;color:#111" download="recording.webm">Tải về</a>
       <div id="recTimer" class="timer">00:00</div>
     </div>
 
-    <div class="row" style="align-items:center;margin-top:6px">
-      <div class="small">Mức âm thanh khi ghi:</div>
-      <div class="meter"><div class="level" id="meterLevelRec"></div></div>
-      <div class="timer" id="levelDbRec">— dB</div>
-    </div>
-
     <audio id="playback" controls></audio>
+
+    <div class="note">Kết quả ghi âm có thể phát lại và tải về. Một số trình duyệt (như iOS) chỉ cho phát khi có thao tác người dùng.</div>
   </div>
 
 <script>
@@ -98,10 +94,10 @@
   const startPreviewBtn=document.getElementById('startPreviewBtn');
   const stopPreviewBtn=document.getElementById('stopPreviewBtn');
   const videoPreview=document.getElementById('videoPreview');
-  const meterLevelCam=document.getElementById('meterLevelCam');
-  const levelDbCam=document.getElementById('levelDbCam');
-  const meterLevelRec=document.getElementById('meterLevelRec');
-  const levelDbRec=document.getElementById('levelDbRec');
+  const meterLevel=document.getElementById('meterLevel');
+  const levelDb=document.getElementById('levelDb');
+  const recMeterLevel=document.getElementById('recMeterLevel');
+  const recLevelDb=document.getElementById('recLevelDb');
   const startRecBtn=document.getElementById('startRecBtn');
   const stopRecBtn=document.getElementById('stopRecBtn');
   const playRecBtn=document.getElementById('playRecBtn');
@@ -110,139 +106,167 @@
   const recTimer=document.getElementById('recTimer');
 
   let currentStream=null;
-  let audioContextCam=null, analyserCam=null, rafCam=null;
-  let audioContextRec=null, analyserRec=null, rafRec=null;
-  let mediaRecorder=null, recordedChunks=[];
-  let recTimerInterval=null, recordingStart=null;
+  let audioContext=null;
+  let analyser=null;
+  let rafId=null;
+  let mediaRecorder=null;
+  let recordedChunks=[];
+  let recordingStart=null;
+  let recTimerInterval=null;
+  let recAnalyser=null;
+  let recAudioCtx=null;
+  let recRafId=null;
 
   async function updateDeviceList(){
-    const devices=await navigator.mediaDevices.enumerateDevices();
-    const cams=devices.filter(d=>d.kind==='videoinput');
-    const mics=devices.filter(d=>d.kind==='audioinput');
-    cameraSelect.innerHTML=cams.map(c=>`<option value="${c.deviceId}">${c.label||'Camera '+(cams.indexOf(c)+1)}</option>`).join('')||'<option>(Không có camera)</option>';
-    micSelect.innerHTML=mics.map(m=>`<option value="${m.deviceId}">${m.label||'Micro '+(mics.indexOf(m)+1)}</option>`).join('')||'<option>(Không có micro)</option>';
+    try{
+      const devices=await navigator.mediaDevices.enumerateDevices();
+      const cams=devices.filter(d=>d.kind==='videoinput');
+      const mics=devices.filter(d=>d.kind==='audioinput');
+
+      cameraSelect.innerHTML=cams.map(c=>`<option value="${c.deviceId}">${c.label||'Camera '+(cams.indexOf(c)+1)}</option>`).join('') || '<option value="">(Không có camera)</option>';
+      micSelect.innerHTML=mics.map(m=>`<option value="${m.deviceId}">${m.label||'Micro '+(mics.indexOf(m)+1)}</option>`).join('') || '<option value="">(Không có micro)</option>';
+    }catch(err){
+      console.warn('Không thể liệt kê thiết bị:',err);
+    }
   }
 
   async function startPreview(){
     stopPreview();
-    startPreviewBtn.disabled=true; // 🔒 làm mờ nút khi đang preview
+    const constraints={
+      audio: micSelect.value?{deviceId:{exact:micSelect.value}}:true,
+      video: cameraSelect.value?{deviceId:{exact:cameraSelect.value}}:{facingMode:'user'}
+    };
     try{
-      const constraints={
-        audio: micSelect.value?{deviceId:{exact:micSelect.value}}:true,
-        video: cameraSelect.value?{deviceId:{exact:cameraSelect.value}}:{facingMode:'user'}
-      };
       currentStream=await navigator.mediaDevices.getUserMedia(constraints);
-      videoPreview.srcObject=currentStream;
-      await videoPreview.play().catch(()=>{});
-      stopPreviewBtn.disabled=false;
-      setupAudioMeterCam(currentStream);
+
+      // ✅ Lấy lại ID thật của camera đang dùng
+      const activeVideoTrack=currentStream.getVideoTracks()[0];
+      if(activeVideoTrack && activeVideoTrack.getSettings){
+        const usedDeviceId=activeVideoTrack.getSettings().deviceId;
+        if(usedDeviceId) cameraSelect.value=usedDeviceId;
+      }
+
+      if(currentStream.getVideoTracks().length){
+        videoPreview.srcObject=currentStream;
+        videoPreview.muted=true;
+        await videoPreview.play().catch(()=>{});
+        stopPreviewBtn.disabled=false;
+        startPreviewBtn.disabled=true; // 🔸 Mờ đi khi đang xem preview
+      }else videoPreview.srcObject=null;
+
+      setupAudioMeter(currentStream);
+      await updateDeviceList();
     }catch(err){
-      alert('Không thể truy cập camera/micro: '+err.message);
-      startPreviewBtn.disabled=false; // khôi phục lại nếu lỗi
+      alert('Lỗi khi truy cập camera/micro: '+(err.message||err.name));
     }
   }
 
   function stopPreview(){
     if(currentStream){currentStream.getTracks().forEach(t=>t.stop());currentStream=null;}
     if(videoPreview){videoPreview.pause();videoPreview.srcObject=null;}
-    disconnectAudioMeterCam();
+    disconnectAudioMeter();
     stopPreviewBtn.disabled=true;
-    startPreviewBtn.disabled=false; // ✅ khôi phục nút sáng lại
+    startPreviewBtn.disabled=false; // 🔸 Sáng lại khi ngừng preview
   }
 
-  cameraSelect.addEventListener('change',()=>{if(currentStream)startPreview();});
-
-  function setupAudioMeterCam(stream){
-    disconnectAudioMeterCam();
+  function setupAudioMeter(stream){
+    disconnectAudioMeter();
+    if(!stream)return;
     const audioTracks=stream.getAudioTracks();
     if(!audioTracks.length)return;
-    audioContextCam=new (window.AudioContext||window.webkitAudioContext)();
-    const source=audioContextCam.createMediaStreamSource(new MediaStream(audioTracks));
-    analyserCam=audioContextCam.createAnalyser();
-    analyserCam.fftSize=2048;
-    source.connect(analyserCam);
-    const data=new Uint8Array(analyserCam.fftSize);
+    audioContext=new (window.AudioContext||window.webkitAudioContext)();
+    const source=audioContext.createMediaStreamSource(new MediaStream(audioTracks));
+    analyser=audioContext.createAnalyser();
+    analyser.fftSize=2048;
+    source.connect(analyser);
+    const data=new Uint8Array(analyser.fftSize);
     function update(){
-      analyserCam.getByteTimeDomainData(data);
-      let sum=0;for(let i=0;i<data.length;i++){const v=(data[i]-128)/128;sum+=v*v;}
+      analyser.getByteTimeDomainData(data);
+      let sum=0;
+      for(let i=0;i<data.length;i++){const v=(data[i]-128)/128;sum+=v*v;}
       const rms=Math.sqrt(sum/data.length);
       const db=20*Math.log10(rms||1e-8);
-      const pct=Math.min(100,Math.max(0,rms*300));
-      meterLevelCam.style.width=pct+'%';
-      levelDbCam.textContent=db.toFixed(1)+' dB';
-      rafCam=requestAnimationFrame(update);
+      const pct=Math.min(100,Math.max(0,(rms*300)));
+      meterLevel.style.width=pct+'%';
+      levelDb.textContent=(db===-160?'— dB':db.toFixed(1)+' dB');
+      rafId=requestAnimationFrame(update);
     }
     update();
   }
 
-  function disconnectAudioMeterCam(){
-    if(rafCam){cancelAnimationFrame(rafCam);rafCam=null;}
-    if(analyserCam){analyserCam.disconnect();analyserCam=null;}
-    if(audioContextCam){try{audioContextCam.close();}catch(e){}audioContextCam=null;}
-    meterLevelCam.style.width='0%';
-    levelDbCam.textContent='— dB';
+  function disconnectAudioMeter(){
+    if(rafId){cancelAnimationFrame(rafId);rafId=null;}
+    if(analyser){analyser.disconnect();analyser=null;}
+    if(audioContext){try{audioContext.close();}catch(e){}audioContext=null;}
+    meterLevel.style.width='0%';
+    levelDb.textContent='— dB';
   }
 
-  function setupAudioMeterRec(stream){
-    disconnectAudioMeterRec();
-    const audioTracks=stream.getAudioTracks();
-    if(!audioTracks.length)return;
-    audioContextRec=new (window.AudioContext||window.webkitAudioContext)();
-    const source=audioContextRec.createMediaStreamSource(new MediaStream(audioTracks));
-    analyserRec=audioContextRec.createAnalyser();
-    analyserRec.fftSize=2048;
-    source.connect(analyserRec);
-    const data=new Uint8Array(analyserRec.fftSize);
+  function setupRecMeter(stream){
+    if(!stream)return;
+    recAudioCtx=new (window.AudioContext||window.webkitAudioContext)();
+    const source=recAudioCtx.createMediaStreamSource(stream);
+    recAnalyser=recAudioCtx.createAnalyser();
+    recAnalyser.fftSize=2048;
+    source.connect(recAnalyser);
+    const data=new Uint8Array(recAnalyser.fftSize);
     function update(){
-      analyserRec.getByteTimeDomainData(data);
-      let sum=0;for(let i=0;i<data.length;i++){const v=(data[i]-128)/128;sum+=v*v;}
+      recAnalyser.getByteTimeDomainData(data);
+      let sum=0;
+      for(let i=0;i<data.length;i++){const v=(data[i]-128)/128;sum+=v*v;}
       const rms=Math.sqrt(sum/data.length);
       const db=20*Math.log10(rms||1e-8);
-      const pct=Math.min(100,Math.max(0,rms*300));
-      meterLevelRec.style.width=pct+'%';
-      levelDbRec.textContent=db.toFixed(1)+' dB';
-      rafRec=requestAnimationFrame(update);
+      const pct=Math.min(100,Math.max(0,(rms*300)));
+      recMeterLevel.style.width=pct+'%';
+      recLevelDb.textContent=(db===-160?'— dB':db.toFixed(1)+' dB');
+      recRafId=requestAnimationFrame(update);
     }
     update();
   }
 
-  function disconnectAudioMeterRec(){
-    if(rafRec){cancelAnimationFrame(rafRec);rafRec=null;}
-    if(analyserRec){analyserRec.disconnect();analyserRec=null;}
-    if(audioContextRec){try{audioContextRec.close();}catch(e){}audioContextRec=null;}
-    meterLevelRec.style.width='0%';
-    levelDbRec.textContent='— dB';
+  function stopRecMeter(){
+    if(recRafId){cancelAnimationFrame(recRafId);recRafId=null;}
+    if(recAnalyser){recAnalyser.disconnect();recAnalyser=null;}
+    if(recAudioCtx){try{recAudioCtx.close();}catch(e){}recAudioCtx=null;}
+    recMeterLevel.style.width='0%';
+    recLevelDb.textContent='— dB';
   }
 
   function startRecording(){
-    navigator.mediaDevices.getUserMedia({audio:true}).then(stream=>{
-      setupAudioMeterRec(stream);
+    const constraints={audio: micSelect.value?{deviceId:{exact:micSelect.value}}:true};
+    navigator.mediaDevices.getUserMedia(constraints).then(stream=>{
       recordedChunks=[];
       const options={};
       if(MediaRecorder.isTypeSupported('audio/webm;codecs=opus'))options.mimeType='audio/webm;codecs=opus';
       else if(MediaRecorder.isTypeSupported('audio/ogg;codecs=opus'))options.mimeType='audio/ogg;codecs=opus';
       mediaRecorder=new MediaRecorder(stream,options);
-      mediaRecorder.ondataavailable=e=>{if(e.data.size)recordedChunks.push(e.data);};
+      mediaRecorder.ondataavailable=e=>{if(e.data&&e.data.size)recordedChunks.push(e.data);};
       mediaRecorder.onstop=()=>{
-        disconnectAudioMeterRec();
         const blob=new Blob(recordedChunks,{type:recordedChunks[0]?.type||'audio/webm'});
         const url=URL.createObjectURL(blob);
         playback.src=url;
         playRecBtn.disabled=false;
         downloadLink.href=url;
+        downloadLink.download='recording.'+(blob.type.includes('ogg')?'ogg':'webm');
+        stream.getTracks().forEach(t=>t.stop());
+        stopRecMeter();
       };
+      setupRecMeter(stream);
       mediaRecorder.start();
+      recordingStart=Date.now();
       startRecBtn.disabled=true;
       stopRecBtn.disabled=false;
       playRecBtn.disabled=true;
-      recordingStart=Date.now();
+      recTimer.textContent='00:00';
       recTimerInterval=setInterval(()=>{
         const s=Math.floor((Date.now()-recordingStart)/1000);
         const mm=String(Math.floor(s/60)).padStart(2,'0');
         const ss=String(s%60).padStart(2,'0');
         recTimer.textContent=`${mm}:${ss}`;
-      },300);
-    }).catch(e=>alert('Không thể ghi âm: '+e.message));
+      },250);
+    }).catch(err=>{
+      alert('Không thể truy cập micro để ghi âm: '+(err.message||err.name));
+    });
   }
 
   function stopRecording(){
@@ -252,13 +276,15 @@
     stopRecBtn.disabled=true;
   }
 
-  playRecBtn.addEventListener('click',()=>playback.play().catch(()=>{}));
+  playRecBtn.addEventListener('click',()=>{if(playback.src)playback.play().catch(()=>{});});
   startPreviewBtn.addEventListener('click',startPreview);
   stopPreviewBtn.addEventListener('click',stopPreview);
   startRecBtn.addEventListener('click',startRecording);
   stopRecBtn.addEventListener('click',stopRecording);
-  navigator.mediaDevices.addEventListener('devicechange',updateDeviceList);
+
+  navigator.mediaDevices&&navigator.mediaDevices.addEventListener&&navigator.mediaDevices.addEventListener('devicechange',updateDeviceList);
   await updateDeviceList();
+  window.addEventListener('beforeunload',()=>{stopPreview();});
 })();
 </script>
 </body>
