--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Tạo link cài đặt iOS (.plist) từ file tải lên</title>
   <style>
-    body { font-family: system-ui, Arial, sans-serif; background: #f7f7f9; color: #222; padding: 24px; }
+    body { font-family: system-ui, Arial, sans-serif; background:#f7f7f9; color:#222; padding:24px; }
     h1 { font-size: 1.3rem; }
     label { display:block; margin:10px 0 2px;}
     input[type="text"] { width: 100%; max-width: 480px; padding: 8px; border-radius: 6px; border:1px solid #bbb; margin-bottom: 10px;}
@@ -23,7 +23,7 @@
 <body>
   <h1>Tạo link cài đặt iOS (.plist) từ file tải lên</h1>
   <label>Chọn file .plist mẫu trên máy bạn:</label>
-  <input type="file" accept=".plist,application/xml,text/xml" id="plistFile">
+  <input type="file" id="plistFile">
 
   <label>Nhập Link iPA:</label>
   <input type="text" id="ipaUrl" placeholder="https://.../yourapp.ipa">
