--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Tạo link cài đặt iOS (.plist) từ file tải lên</title>
+  <title>Tạo link cài đặt iOS (.plist) từ file upload</title>
   <style>
     body { font-family: system-ui, Arial, sans-serif; background:#f7f7f9; color:#222; padding:24px; }
     h1 { font-size: 1.3rem; }
@@ -18,6 +18,7 @@
     .plist-link {display:inline-block; margin-top:8px;}
     .footer{margin-top:40px;text-align:center;color:#555;font-size:0.95rem;}
     pre{background:#f5f5f5;padding:8px;border-radius:6px;max-width:100%;overflow:auto;}
+    .warning{color:#b71c1c;font-weight:bold;padding:8px 0;}
   </style>
 </head>
 <body>
@@ -41,7 +42,7 @@
 
   <div id="result" class="result" style="display:none"></div>
   <div class="note">
-    * Sau khi tải file .plist, bạn cần upload lên host HTTPS của bạn (vd: github.io, firebase, vps...)<br>
+    * Sau khi tải file .plist, bạn cần upload lên host HTTPS của bạn (github.io, firebase, vps...)<br>
     * Link cài đặt <b>itms-services://...</b> chỉ hoạt động trên iPhone/iPad.<br>
     * Nếu bạn đã up file lên host, thay link <b>url=...</b> bằng link public file .plist của bạn.<br>
     * File .plist mẫu cần có các biến <b>__IPA_URL__, __BUNDLE_ID__, __VERSION__, __APP_NAME__</b>
@@ -83,12 +84,24 @@ document.getElementById('generateBtn').onclick = async function() {
     reader.readAsText(plistInput.files[0]);
   });
 
+  // Kiểm tra đủ placeholder chưa
+  let warn = "";
+  if (!fileText.includes("__IPA_URL__")) warn += "<div class='warning'>Thiếu __IPA_URL__ trong file mẫu!</div>";
+  if (!fileText.includes("__BUNDLE_ID__")) warn += "<div class='warning'>Thiếu __BUNDLE_ID__ trong file mẫu!</div>";
+  if (!fileText.includes("__VERSION__")) warn += "<div class='warning'>Thiếu __VERSION__ trong file mẫu!</div>";
+  if (!fileText.includes("__APP_NAME__")) warn += "<div class='warning'>Thiếu __APP_NAME__ trong file mẫu!</div>";
+
   // Thay thế các biến placeholder
   let plist = fileText
     .replace(/__IPA_URL__/g, escapeXml(ipaUrl))
     .replace(/__BUNDLE_ID__/g, escapeXml(bundleId))
     .replace(/__VERSION__/g, escapeXml(version))
     .replace(/__APP_NAME__/g, escapeXml(appName));
+
+  // Nếu còn placeholder, báo lỗi
+  if (plist.includes("__IPA_URL__") || plist.includes("__BUNDLE_ID__") || plist.includes("__VERSION__") || plist.includes("__APP_NAME__")) {
+    warn += "<div class='warning'>Cảnh báo: Một số placeholder vẫn chưa được thay thế. Kiểm tra lại file mẫu và nhập đúng thông tin.</div>";
+  }
 
   // Tạo Blob và objectURL cho .plist
   const plistBlob = new Blob([plist], {type:"application/xml"});
@@ -98,7 +111,7 @@ document.getElementById('generateBtn').onclick = async function() {
   const fakeHost = "https://yourhost.com/path/to/your.plist";
   const itmsSample = `itms-services://?action=download-manifest&url=${encodeURIComponent(fakeHost)}`;
 
-  result.innerHTML = `
+  result.innerHTML = warn + `
     <label>File .plist đã tạo:</label><br>
     <a class="plist-link" href="${plistUrl}" download="${appName.replace(/\s+/g,"_") || "app"}.plist">Tải file .plist về</a>
     <br><br>
